Blender 2.8 - Eevee - 129th light crashes Blender #52546

Closed
opened 2017-08-25 20:52:08 +02:00 by Jozef Zajac · 12 comments

System Information
Windows 7, NVidia GTX 1080

Blender Version
Broken: (example: 2.78 Branch 2.8 build-8ddaa6a, see splash screen)
still
Broken: (example: 2.79 Branch 2.8 build-9e76269, see splash screen)

Short description of error
Blender crashes when 129 lights are visible in viewport
(my scene I work on contains about 200 lights in different collections,
once more than 128 are visible in the same time, blender crashes)

a) maybe it is an OpenGL restriction on number of lights in scene
( in this case some warning would be appropriate, with restricting the number lights to appear in viewport )
b) maybe it is a max value for variable holding the number of lights in the scene, that can be easily rised
c) up to you to figure it out :)

Exact steps for others to reproduce the error
easy to reproduce, duplicate the selected light from attached sample file
129th_light_crashes_blender_eevee.blend

**System Information** Windows 7, NVidia GTX 1080 **Blender Version** Broken: (example: 2.78 Branch 2.8 build-8ddaa6a, see splash screen) still Broken: (example: 2.79 Branch 2.8 build-9e76269, see splash screen) **Short description of error** Blender crashes when 129 lights are visible in viewport (my scene I work on contains about 200 lights in different collections, once more than 128 are visible in the same time, blender crashes) a) maybe it is an OpenGL restriction on number of lights in scene ( in this case some warning would be appropriate, with restricting the number lights to appear in viewport ) b) maybe it is a max value for variable holding the number of lights in the scene, that can be easily rised c) up to you to figure it out :) **Exact steps for others to reproduce the error** easy to reproduce, duplicate the selected light from attached sample file [129th_light_crashes_blender_eevee.blend](https://archive.blender.org/developer/F725689/129th_light_crashes_blender_eevee.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @zajooo

Added subscriber: @zajooo
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Ray molenkamp self-assigned this 2017-08-25 20:56:25 +02:00
Member

Thank you for the report, but 2.8 is currently under heavy development, and we are not taking bugs from end users yet.
Keep watching for updates at https://builder.blender.org/download/ to see if your issue got resolved.

For the time being, closing this report.

Thank you for the report, but 2.8 is currently under heavy development, and we are not taking bugs from end users yet. Keep watching for updates at https://builder.blender.org/download/ to see if your issue got resolved. For the time being, closing this report.

Added subscribers: @fclem, @dfelinto

Added subscribers: @fclem, @dfelinto

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Ray molenkamp was unassigned by Dalai Felinto 2017-08-28 18:18:02 +02:00
Clément Foucault was assigned by Dalai Felinto 2017-08-28 18:18:02 +02:00

I will leave this open actually. I can reproduce it here, and it's something that @fclem will know right away if it's a bug or a hardcoded design limitation.

I will leave this open actually. I can reproduce it here, and it's something that @fclem will know right away if it's a bug or a hardcoded design limitation.

It's hardcoded design limitation for now, but it should not crash. i'll see if I can reproduce this.

It's hardcoded design limitation for now, but it should not crash. i'll see if I can reproduce this.

This issue was referenced by 7a6f9ab587

This issue was referenced by 7a6f9ab587e6e7b7daead5c84a31343ed3e6184d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Tried todays build, blender does not crash, but the lights after 128 lights, are weirdly switching off the prior lights. Anyway step forward, and looking forward to rise the limit in future ;)

Tried todays build, blender does not crash, but the lights after 128 lights, are weirdly switching off the prior lights. Anyway step forward, and looking forward to rise the limit in future ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52546
No description provided.