Eevee: Fix T52546 : 129th light crashes Blender